--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,8 @@ body{
   padding: 0;
 }
 
+a{text-decoration: none;}
+
 #img-front{
   height: 45vw;
 }
@@ -96,3 +98,47 @@ main #img-last{
   background-position: bottom;
   background-size: cover;
 }
+
+.logo{
+  width: 10vw;
+  margin-left: 6vw;
+  margin-right: 6vw;
+}
+
+form input[type="email"], form textarea{
+  outline: none;
+  border: 0;
+  border-bottom: 2px solid #555555;
+  padding-bottom: 10px;
+  margin-top: 1em;
+  width: 100%;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-size: 1rem;
+}
+form textarea{
+  height: 100px;
+  resize: none;
+}
+form input[type="submit"]{
+  margin-top: 10px;
+  padding: 10px;
+  width: 100%;
+  background: rgb(2,0,36);
+  background: linear-gradient(25deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  color: white;
+  border: 0;
+  border-radius: 20px;
+}
+
+footer{background-color: black; margin-top: 20px;}
+footer ul{
+  margin: 0;
+  padding: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  list-style-type: none;
+}
+footer li{margin: 0;}
+footer a{color: white;}
+footer a:hover{color: blue;}
