booklet download link on preview carousel

--- a/public/style.css
+++ b/public/style.css
@@ -93,7 +93,34 @@ main #img-last{
   width: 10vw;
   margin-left: 6vw;
   margin-right: 6vw;
+  margin-top: 7vw;
+  margin-bottom: 7vw;
 }
+
+
+@keyframes slidy {
+  0% { left: 0%; }
+  20% { left: 0%; }
+  25% { left: -100%; }
+  45% { left: -100%; }
+  50% { left: -200%; }
+  70% { left: -200%; }
+  75% { left: -300%; }
+  95% { left: -300%; }
+  100% { left: -400%; }
+}
+div#slider { width: 100%; max-width: 1000px; overflow: hidden }
+div#slider figure {
+  position: relative;
+  width: 500%;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  left: 0;
+  text-align: left;
+  animation: 15s slidy infinite;
+}
+div#slider figure img { width: 20%; height: auto; float: left; }
 
 form input, form textarea{
   border: 0;
